[gd_scene load_steps=12 format=2]

[ext_resource path="res://Assets/Icons/MoveUp.svg" type="Texture" id=1]
[ext_resource path="res://Scenes/Interface/MainInterface.gd" type="Script" id=2]
[ext_resource path="res://Assets/Icons/MoveDown.svg" type="Texture" id=3]
[ext_resource path="res://Scenes/Interface/QuitDialog.tscn" type="PackedScene" id=4]
[ext_resource path="res://Assets/Icons/Duplicate.svg" type="Texture" id=5]

[sub_resource type="InputEventKey" id=1]
pressed = true
scancode = 16777221

[sub_resource type="ShortCut" id=2]
shortcut = SubResource( 1 )

[sub_resource type="InputEventKey" id=3]
control = true
command = true
pressed = true
scancode = 92

[sub_resource type="ShortCut" id=4]
shortcut = SubResource( 3 )

[sub_resource type="InputEventKey" id=5]
control = true
command = true
scancode = 68

[sub_resource type="ShortCut" id=6]
shortcut = SubResource( 5 )

[node name="Main" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -0.793701
margin_bottom = -0.793701
custom_constants/margin_right = 10
custom_constants/margin_top = 10
custom_constants/margin_left = 10
custom_constants/margin_bottom = 10
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/MarginContainer"]
margin_left = 10.0
margin_top = 10.0
margin_right = 670.0
margin_bottom = 750.0
custom_constants/separation = 9

[node name="Menus" type="HBoxContainer" parent="Panel/MarginContainer/VBoxContainer"]
margin_right = 660.0
margin_bottom = 20.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FileMenu" type="MenuButton" parent="Panel/MarginContainer/VBoxContainer/Menus"]
margin_right = 35.0
margin_bottom = 20.0
text = "File"
items = [ "New...", null, 0, false, false, 2, 0, null, "", false, "", null, 0, false, false, 99, 0, null, "", true, "Save...  (Ctrl+S)", null, 0, false, false, 0, 0, null, "", false, "Load...  (Ctrl+O)", null, 0, false, false, 1, 0, null, "", false ]

[node name="ActorMenu" type="MenuButton" parent="Panel/MarginContainer/VBoxContainer/Menus"]
margin_left = 39.0
margin_right = 92.0
margin_bottom = 20.0
text = "Actors"
items = [ "Add actor", null, 0, false, false, 0, 0, null, "", false, "Edit actor", null, 0, false, false, 1, 0, null, "", false ]

[node name="HSeparator" type="HSeparator" parent="Panel/MarginContainer/VBoxContainer"]
margin_top = 29.0
margin_right = 660.0
margin_bottom = 33.0
mouse_filter = 2
size_flags_vertical = 0

[node name="SubButtons" type="HBoxContainer" parent="Panel/MarginContainer/VBoxContainer"]
margin_top = 42.0
margin_right = 660.0
margin_bottom = 67.0
custom_constants/separation = 11

[node name="AddEntry" type="Button" parent="Panel/MarginContainer/VBoxContainer/SubButtons"]
margin_right = 74.0
margin_bottom = 25.0
hint_tooltip = "Add translation entry to the bottom"
focus_mode = 0
shortcut = SubResource( 2 )
text = "Add entry"

[node name="AddComment" type="Button" parent="Panel/MarginContainer/VBoxContainer/SubButtons"]
margin_left = 85.0
margin_right = 188.0
margin_bottom = 25.0
hint_tooltip = "Add comment to the bottom"
focus_mode = 0
shortcut = SubResource( 4 )
text = "Add comment"
align = 0

[node name="VSeparator" type="VSeparator" parent="Panel/MarginContainer/VBoxContainer/SubButtons"]
margin_left = 199.0
margin_right = 203.0
margin_bottom = 25.0

[node name="ArrowDown" type="TextureButton" parent="Panel/MarginContainer/VBoxContainer/SubButtons"]
margin_left = 214.0
margin_right = 239.0
margin_bottom = 25.0
rect_min_size = Vector2( 25, 25 )
hint_tooltip = "(Alt+Down)
Move entry down"
focus_mode = 0
texture_normal = ExtResource( 3 )
expand = true
stretch_mode = 5

[node name="ArrowUp" type="TextureButton" parent="Panel/MarginContainer/VBoxContainer/SubButtons"]
margin_left = 250.0
margin_right = 275.0
margin_bottom = 25.0
rect_min_size = Vector2( 25, 25 )
hint_tooltip = "(Alt+Up)
Move entry down"
focus_mode = 0
texture_normal = ExtResource( 1 )
expand = true
stretch_mode = 5

[node name="Duplicate" type="TextureButton" parent="Panel/MarginContainer/VBoxContainer/SubButtons"]
margin_left = 286.0
margin_right = 311.0
margin_bottom = 25.0
rect_min_size = Vector2( 25, 25 )
hint_tooltip = "Duplicate"
focus_mode = 0
size_flags_horizontal = 9
shortcut = SubResource( 6 )
texture_normal = ExtResource( 5 )
expand = true
stretch_mode = 5

[node name="HSeparator3" type="HSeparator" parent="Panel/MarginContainer/VBoxContainer"]
margin_top = 76.0
margin_right = 660.0
margin_bottom = 80.0

[node name="SubtitleContainer" type="ScrollContainer" parent="Panel/MarginContainer/VBoxContainer"]
margin_top = 89.0
margin_right = 660.0
margin_bottom = 740.0
size_flags_vertical = 3
follow_focus = true
scroll_horizontal_enabled = false

[node name="MarginContainer" type="MarginContainer" parent="Panel/MarginContainer/VBoxContainer/SubtitleContainer"]
margin_right = 660.0
margin_bottom = 651.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_right = 2
custom_constants/margin_top = 10
custom_constants/margin_left = 2
custom_constants/margin_bottom = 10

[node name="SubList" type="VBoxContainer" parent="Panel/MarginContainer/VBoxContainer/SubtitleContainer/MarginContainer"]
margin_left = 2.0
margin_top = 10.0
margin_right = 658.0
margin_bottom = 641.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 10

[node name="SaveSubFileDialog" type="FileDialog" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -361.0
margin_top = -230.0
margin_right = 362.0
margin_bottom = 230.0
popup_exclusive = true
resizable = true
dialog_text = "Save subtitle file (if you just saved the file, use F5 to refresh the window)"
access = 2
filters = PoolStringArray( "*.txt" )
show_hidden_files = true
current_dir = "/Losfroger/Documentos/Godot/SubtitleEditor"
current_path = "/Losfroger/Documentos/Godot/SubtitleEditor/"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LoadSubFileDialog" type="FileDialog" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -361.0
margin_top = -230.0
margin_right = 362.0
margin_bottom = 230.0
popup_exclusive = true
window_title = "Open a File"
resizable = true
dialog_text = "Load subtitle file"
mode = 0
access = 2
filters = PoolStringArray( "*.txt" )
current_dir = "/Losfroger/Documentos/Godot/SubtitleEditor"
current_path = "/Losfroger/Documentos/Godot/SubtitleEditor/"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ErrorDialog" type="AcceptDialog" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -94.0
margin_top = -49.0
margin_right = 96.0
margin_bottom = 50.0
size_flags_horizontal = 11
size_flags_vertical = 13
popup_exclusive = true
window_title = "Error"
dialog_text = "Test"
dialog_autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NewFileDialog" type="ConfirmationDialog" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -113.0
margin_top = -57.0
margin_right = 112.0
margin_bottom = 62.0
popup_exclusive = true
window_title = "New file"
dialog_text = "This action will delete any unsaved changes you have.

Do you want to continue?"
dialog_autowrap = true

[node name="QuitDialog" parent="." instance=ExtResource( 4 )]

[connection signal="pressed" from="Panel/MarginContainer/VBoxContainer/SubButtons/AddEntry" to="." method="_on_AddEntry_pressed"]
[connection signal="pressed" from="Panel/MarginContainer/VBoxContainer/SubButtons/AddComment" to="." method="_on_AddComment_pressed"]
[connection signal="pressed" from="Panel/MarginContainer/VBoxContainer/SubButtons/ArrowDown" to="." method="_on_ArrowDown_pressed"]
[connection signal="pressed" from="Panel/MarginContainer/VBoxContainer/SubButtons/ArrowUp" to="." method="_on_ArrowUp_pressed"]
[connection signal="pressed" from="Panel/MarginContainer/VBoxContainer/SubButtons/Duplicate" to="." method="_on_Duplicate_pressed"]
[connection signal="file_selected" from="SaveSubFileDialog" to="." method="_on_SaveSubFileDialog_file_selected"]
[connection signal="popup_hide" from="SaveSubFileDialog" to="." method="_on_SaveSubFileDialog_popup_hide"]
[connection signal="file_selected" from="LoadSubFileDialog" to="." method="_on_LoadSubFileDialog_file_selected"]
[connection signal="confirmed" from="NewFileDialog" to="." method="_on_NewFileDialog_confirmed"]
